# SAMoS

./: .gitignore  CMakeBoostSetup.txt  CMakeCFlagsSetup.txt  CMakeCGALSetup.txt  CMakeGSLSetup.txt  CMakeLists.txt  CMakeMiscSetup.txt  CMakeSRCSetup.txt  CMakeVTKSetup.txt  GPATH  GRTAGS  GTAGS  README  README.md  doxy.conf
FormerAnalysis/: Patches_stresses_defects_lib.py  StressEnergy_plot.py  cells_patches_stresses_defects.py  cells_patches_stresses_defects_cells.py  nematic_analysis.py  nematic_analysis_version_silke.py  nematic_defects_analysis.py  polar_defects_analysis_debug.py  (+3 more)
src/: CMakeLists.txt  apcs.cpp  apcs.hpp  samos.cpp  samos.hpp
src/aligner/: aligner.cpp  aligner.hpp
src/aligner/pair/: pair_aligner.hpp  pair_mf_aligner.cpp  pair_mf_aligner.hpp  pair_nematic_aligner.cpp  pair_nematic_aligner.hpp  pair_polar_aligner.cpp  pair_polar_aligner.hpp  pair_velocity_aligner.cpp  pair_velocity_aligner.hpp  pair_vicsek_aligner.cpp  pair_vicsek_aligner.hpp
src/constraints/: CMakeLists.txt  constrainer.hpp  constraint.cpp  constraint.hpp  constraint_actomyo.cpp  constraint_actomyo.hpp  constraint_cylinder.cpp  constraint_cylinder.hpp  constraint_ellipsoid.cpp  constraint_ellipsoid.hpp  constraint_gaussian_bump.cpp  constraint_gaussian_bump.hpp  constraint_gyroid.cpp  constraint_gyroid.hpp  constraint_hourglass.cpp  constraint_hourglass.hpp  constraint_none.hpp  constraint_peanut.cpp  constraint_peanut.hpp  constraint_plane.cpp  constraint_plane.hpp  constraint_plane_walls.cpp  constraint_plane_walls.hpp  constraint_slab.cpp  constraint_slab.hpp  constraint_sphere.cpp  constraint_sphere.hpp  constraint_tetrahedron.cpp  constraint_tetrahedron.hpp  constraint_torus.cpp  constraint_torus.hpp
src/dump/: dump.cpp  dump.hpp
src/integrators/: CMakeLists.txt  integrator.hpp  integrator_actomyo.cpp  integrator_actomyo.hpp  integrator_brownian.cpp  integrator_brownian.hpp  integrator_brownian_align.cpp  integrator_brownian_align.hpp  integrator_brownian_pos.cpp  integrator_brownian_pos.hpp  integrator_brownian_rod.cpp  integrator_brownian_rod.hpp  integrator_fire.cpp  integrator_fire.hpp  integrator_langevin.cpp  integrator_langevin.hpp  integrator_nematic.cpp  integrator_nematic.hpp  integrator_nve.cpp  integrator_nve.hpp  integrator_sepulveda.cpp  integrator_sepulveda.hpp  integrator_vicsek.cpp  integrator_vicsek.hpp
src/log/: log.hpp  log_angle_eng.hpp  log_area.hpp  log_bond_eng.hpp  log_external_eng.hpp  log_kinetic_eng.hpp  log_pair_align.hpp  log_pair_eng.hpp  log_perim.hpp  log_size.hpp  log_step.hpp  log_vec_velocity.hpp  log_velocity.hpp  logger.cpp  logger.hpp
src/messenger/: messenger.cpp  messenger.hpp
src/parser/: a.out  main.cpp  parse_align.hpp  parse_angle.hpp  parse_aux.hpp  parse_bond.hpp  parse_box.hpp  parse_command.hpp  parse_constraint.hpp  parse_disable.hpp  parse_external.hpp  parse_external_align.hpp  parse_extrenal.hpp  parse_group.hpp  parse_input.hpp  parse_integrator.hpp  parse_log_dump.hpp  parse_parameters.hpp  parse_population.hpp  parse_population_disable.hpp  parse_potential.hpp  parse_rng_seed.hpp  parse_run.hpp  parse_timestep.hpp
src/population/: population.hpp  population_actomyosin.cpp  population_actomyosin.hpp  population_actomyosin_head.cpp  population_actomyosin_head.hpp  population_actomyosin_molecule.cpp  population_actomyosin_molecule.hpp  population_actomyosin_poisson.cpp  population_actomyosin_poisson.hpp  population_cell.cpp  population_cell.hpp  population_density.cpp  population_density.hpp  population_elongation.cpp  population_elongation.hpp  population_growth.cpp  population_growth.hpp  population_random.cpp  population_random.hpp  population_region.cpp  population_region.hpp
src/potentials/: potential.cpp  potential.hpp
src/potentials/angle/: angle_cosine_potential.cpp  angle_cosine_potential.hpp  angle_harmonic_potential.cpp  angle_harmonic_potential.hpp  angle_potential.hpp
src/potentials/bond/: bond_active_force.cpp  bond_active_force.hpp  bond_fene_potential.cpp  bond_fene_potential.hpp  bond_harmonic_potential.cpp  bond_harmonic_potential.hpp  bond_potential.hpp
src/potentials/pair/: pair_abp_actreact_potential.cpp  pair_abp_actreact_potential.hpp  pair_active_nematic_potential.cpp  pair_active_nematic_potential.hpp  pair_active_potential.cpp  pair_active_potential.hpp  pair_bare_coulomb_potential.cpp  pair_bare_coulomb_potential.hpp  pair_boundary_attraction_potential.cpp  pair_boundary_attraction_potential.hpp  pair_boundary_bending_potential.cpp  pair_boundary_bending_potential.hpp  pair_coulomb3_potential.cpp  pair_coulomb3_potential.hpp  pair_coulomb_potential.cpp  pair_coulomb_potential.hpp  pair_gaussian_potential.cpp  pair_gaussian_potential.hpp  pair_line_tension_potential.cpp  pair_line_tension_potential.hpp  pair_lj_potential.cpp  pair_lj_potential.hpp  pair_ljrod_potential.cpp  pair_ljrod_potential.hpp  pair_morse_potential.cpp  pair_morse_potential.hpp  pair_motor_potential.cpp  pair_motor_potential.hpp  pair_potential.hpp  pair_rod_potential.cpp  pair_rod_potential.hpp  pair_soft_attractive_potential.cpp  pair_soft_attractive_potential.hpp  pair_soft_potential.cpp  pair_soft_potential.hpp  pair_vertex_particle_potential.cpp  pair_vertex_particle_potential.hpp  pair_vicsek_potential.cpp  pair_vicsek_potential.hpp  pair_yukawa_potential.cpp  (+1 more)
src/system/: a.out  angle.hpp  bond.hpp  box.hpp  cell.hpp  cell_list.cpp  cell_list.hpp  defaults.hpp  edge.cpp  edge.hpp  face.cpp  face.hpp  group.hpp  main.cpp  matrix3d.cpp  matrix3d.hpp  meho  mesh.cpp  mesh.hpp  neighbour_list.cpp  neighbour_list.hpp  particle.cpp  particle.hpp  system.cpp  system.hpp  value.hpp  vector3d.cpp  vector3d.hpp  vertex.cpp  vertex.hpp
src/utils/: class_factory.hpp  defaults.hpp  factory_types.hpp  register.hpp  register_angle_potentials.cpp  register_bond_potentials.cpp  register_constraints.cpp  register_external_aligners.cpp  register_external_potentials.cpp  register_integrators.cpp  register_pair_aligners.cpp  register_pair_potentials.cpp  register_populations.cpp  register_values.cpp  rng.cpp  rng.hpp
(+322 files in other folders)
